--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.1",
+    "lottie-react-native": "^7.3.4",
     "nodemailer": "^7.0.5",
     "react": "18.3.1",
     "react-native": "0.76.9",
